@@ -1,3 +1,8 @@
+2017-11-14  Tom de Vries  <tom@codesourcery.com>
+
+	* testsuite/libgomp.oacc-c-c++-common/asyncwait-1.c: Allow to run for
+	non-nvidia devices.
+
 2017-11-07  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/82835
